[gd_scene load_steps=4 format=1]

[ext_resource path="res://tools/skilledit.gd" type="Script" id=1]
[ext_resource path="res://fonts/gothic_15.fnt" type="BitmapFont" id=2]
[ext_resource path="res://battle/UI/SkillButton.xscn" type="PackedScene" id=3]

[node name="SkillEdit" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 410.0
margin/bottom = 480.0
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"2D" }

[node name="TagSelector" type="Panel" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 410.0
margin/bottom = 60.0

[node name="Header" type="Label" parent="TagSelector" groups=[ "SkillEdit" ]]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 10.0
margin/right = 390.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Vault City: Raiders - Skill edit"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Tag" type="OptionButton" parent="TagSelector"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 30.0
margin/right = 330.0
margin/bottom = 49.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="TagButtonAdd" type="Button" parent="TagSelector/Tag"]

hint/tooltip = "New tag"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 330.0
margin/top = 0.0
margin/right = 350.0
margin/bottom = 19.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false

[node name="TagButtonDel" type="Button" parent="TagSelector/Tag"]

hint/tooltip = "Delete tag"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 350.0
margin/top = 0.0
margin/right = 370.0
margin/bottom = 19.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "-"
flat = false

[node name="TagButtonRen" type="Button" parent="TagSelector/Tag"]

hint/tooltip = "Rename tag"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 370.0
margin/top = 0.0
margin/right = 391.0
margin/bottom = 19.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "R"
flat = false

[node name="LineEdit" type="LineEdit" parent="TagSelector/Tag"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 395.0
margin/bottom = 23.0
text = "_newtag_"
placeholder/alpha = 0.6
max_length = 8
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 1.0

[node name="LineEdit2" type="LineEdit" parent="TagSelector/Tag"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 395.0
margin/bottom = 23.0
text = "_newtag_"
placeholder/alpha = 0.6
max_length = 8
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 1.0

[node name="SkillEdit" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 50.0
margin/right = 410.0
margin/bottom = 480.0

[node name="Name" type="Label" parent="SkillEdit"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 90.0
margin/bottom = 30.0
text = "Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LineEdit" type="LineEdit" parent="SkillEdit/Name"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 0.0
margin/right = 390.0
margin/bottom = 23.0
text = "Skill name"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 1.0

[node name="Effect" type="Label" parent="SkillEdit"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 40.0
margin/right = 90.0
margin/bottom = 60.0
text = "Effect file"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LineEdit" type="LineEdit" parent="SkillEdit/Effect"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 0.0
margin/right = 350.0
margin/bottom = 23.0
text = "..."
placeholder/alpha = 0.6
editable = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 1.0

[node name="Button" type="Button" parent="SkillEdit/Effect"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 350.0
margin/top = 0.0
margin/right = 392.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Open"
flat = false

[node name="FileDialog" type="FileDialog" parent="SkillEdit/Effect"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -10.0
margin/top = -60.0
margin/right = 790.0
margin/bottom = 390.0
popup/exclusive = true
window/title = "Save a File"
dialog/hide_on_ok = true
mode = 4
access = 0
filters = StringArray( "*" )
show_hidden_files = true

[node name="Source" type="Label" parent="SkillEdit"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 70.0
margin/right = 96.0
margin/bottom = 90.0
text = "Power source"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OptionButton" type="OptionButton" parent="SkillEdit/Source"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 310.0
margin/top = 0.0
margin/right = 390.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="Levels" type="Label" parent="SkillEdit"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 100.0
margin/right = 90.0
margin/bottom = 120.0
text = "Levels"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpinBox" type="SpinBox" parent="SkillEdit/Levels"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 310.0
margin/top = 0.0
margin/right = 394.0
margin/bottom = 24.0
range/min = 1.0
range/max = 8.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="Overcost" type="Label" parent="SkillEdit"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 130.0
margin/right = 90.0
margin/bottom = 150.0
text = "Over cost"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpinBox" type="SpinBox" parent="SkillEdit/Overcost"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 310.0
margin/top = 0.0
margin/right = 394.0
margin/bottom = 24.0
range/min = 5.0
range/max = 50.0
range/step = 1.0
range/page = 0.0
range/value = 5.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="SkillLV1" type="Button" parent="SkillEdit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 200.0
margin/right = 100.0
margin/bottom = 220.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 1"
flat = false

[node name="SkillLV2" type="Button" parent="SkillEdit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 200.0
margin/right = 200.0
margin/bottom = 220.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 2"
flat = false

[node name="SkillLV3" type="Button" parent="SkillEdit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 220.0
margin/top = 200.0
margin/right = 300.0
margin/bottom = 220.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 3"
flat = false

[node name="SkillLV4" type="Button" parent="SkillEdit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 320.0
margin/top = 200.0
margin/right = 400.0
margin/bottom = 220.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 4"
flat = false

[node name="SkillLV5" type="Button" parent="SkillEdit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 230.0
margin/right = 100.0
margin/bottom = 250.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 5"
flat = false

[node name="SkillLV6" type="Button" parent="SkillEdit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 230.0
margin/right = 200.0
margin/bottom = 250.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 6"
flat = false

[node name="SkillLV7" type="Button" parent="SkillEdit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 220.0
margin/top = 230.0
margin/right = 300.0
margin/bottom = 250.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 7"
flat = false

[node name="SkillLV8" type="Button" parent="SkillEdit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 320.0
margin/top = 230.0
margin/right = 400.0
margin/bottom = 250.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Level 8"
flat = false

[node name="SkillLV9" type="Button" parent="SkillEdit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 170.0
margin/top = 260.0
margin/right = 250.0
margin/bottom = 280.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "OVER"
flat = false

[node name="SkillButton" parent="SkillEdit" instance=ExtResource( 3 )]

margin/left = 110.0
margin/top = 300.0
margin/right = 310.0
margin/bottom = 370.0

[node name="PrintButton" type="Button" parent="SkillEdit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 400.0
margin/right = 80.0
margin/bottom = 419.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Print"
flat = false

[node name="LoadButton" type="Button" parent="SkillEdit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 170.0
margin/top = 400.0
margin/right = 240.0
margin/bottom = 420.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Load"
flat = false

[node name="SaveButton" type="Button" parent="SkillEdit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 330.0
margin/top = 400.0
margin/right = 400.0
margin/bottom = 419.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save"
flat = false

[node name="LevelEdit" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 180.0
margin/right = 410.0
margin/bottom = 480.0

[node name="Header" type="Label" parent="LevelEdit"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 130.0
margin/top = 10.0
margin/right = 280.0
margin/bottom = 23.0
text = "Level X"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EnergyUse" type="Label" parent="LevelEdit"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 40.0
margin/right = 100.0
margin/bottom = 60.0
text = "Energy use"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpinBox" type="SpinBox" parent="LevelEdit/EnergyUse"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 290.0
margin/top = 0.0
margin/right = 394.0
margin/bottom = 24.0
range/min = 0.0
range/max = 1.67772e+07
range/step = 1.0
range/page = 0.0
range/value = 1.67772e+07
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="Contact" type="Label" parent="LevelEdit"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 60.0
margin/right = 90.0
margin/bottom = 80.0
text = "Contact"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CheckBox" type="CheckBox" parent="LevelEdit/Contact"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 380.0
margin/top = 0.0
margin/right = 406.0
margin/bottom = 23.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 2

[node name="Damage1" type="Label" parent="LevelEdit"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 80.0
margin/right = 100.0
margin/bottom = 100.0
text = "Damage1"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OptionButton" type="OptionButton" parent="LevelEdit/Damage1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 210.0
margin/top = 0.0
margin/right = 310.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="SpinBox" type="SpinBox" parent="LevelEdit/Damage1"]

rect/min_size = Vector2( 1, 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 320.0
margin/top = 0.0
margin/right = 394.0
margin/bottom = 24.0
range/min = 1.0
range/max = 45000.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="Damage2" type="Label" parent="LevelEdit"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 100.0
margin/right = 100.0
margin/bottom = 120.0
text = "Damage2"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OptionButton" type="OptionButton" parent="LevelEdit/Damage2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 210.0
margin/top = 0.0
margin/right = 310.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="SpinBox" type="SpinBox" parent="LevelEdit/Damage2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 320.0
margin/top = 0.0
margin/right = 394.0
margin/bottom = 24.0
range/min = 1.0
range/max = 45000.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="Accuracy" type="Label" parent="LevelEdit"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 120.0
margin/right = 100.0
margin/bottom = 140.0
text = "Accuracy"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpinBox" type="SpinBox" parent="LevelEdit/Accuracy"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 320.0
margin/top = 0.0
margin/right = 394.0
margin/bottom = 24.0
range/min = 5.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="AGIBonus" type="Label" parent="LevelEdit"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 140.0
margin/right = 100.0
margin/bottom = 160.0
text = "AGI Bonus"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpinBox" type="SpinBox" parent="LevelEdit/AGIBonus"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 320.0
margin/top = 0.0
margin/right = 394.0
margin/bottom = 24.0
range/min = -4000.0
range/max = 4000.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="AD" type="Label" parent="LevelEdit"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 160.0
margin/right = 107.0
margin/bottom = 180.0
text = "Active Defense"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CheckBox" type="CheckBox" parent="LevelEdit/AD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 210.0
margin/top = 0.0
margin/right = 310.0
margin/bottom = 23.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Absolute"
flat = false
align = 0

[node name="SpinBox" type="SpinBox" parent="LevelEdit/AD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 320.0
margin/top = 0.0
margin/right = 394.0
margin/bottom = 24.0
range/min = -90.0
range/max = 200.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="Range" type="Label" parent="LevelEdit"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 180.0
margin/right = 100.0
margin/bottom = 200.0
text = "Range"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpinBox" type="SpinBox" parent="LevelEdit/Range"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 320.0
margin/top = 0.0
margin/right = 394.0
margin/bottom = 24.0
range/min = 0.0
range/max = 6.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="FormationChoice" type="OptionButton" parent="LevelEdit/Range"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 210.0
margin/top = 0.0
margin/right = 310.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="SideChoice" type="OptionButton" parent="LevelEdit/Range"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 0.0
margin/right = 210.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="Tooltip" type="Label" parent="LevelEdit"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 200.0
margin/right = 100.0
margin/bottom = 220.0
text = "Tooltip"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LineEdit" type="LineEdit" parent="LevelEdit/Tooltip"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 0.0
margin/right = 390.0
margin/bottom = 23.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 1.0

[node name="Button" type="Button" parent="LevelEdit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 330.0
margin/top = 240.0
margin/right = 400.0
margin/bottom = 259.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "OK"
flat = false

[node name="Button1" type="Button" parent="LevelEdit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 170.0
margin/top = 240.0
margin/right = 240.0
margin/bottom = 259.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Revert"
flat = false

[node name="Button2" type="Button" parent="LevelEdit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 240.0
margin/right = 80.0
margin/bottom = 259.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Cancel"
flat = false

[node name="TextEdit" type="TextEdit" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 410.0
margin/top = 0.0
margin/right = 800.0
margin/bottom = 480.0
syntax_highlighting = true
show_line_numbers = true
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[connection signal="item_selected" from="TagSelector/Tag" to="." method="_on_Tag_item_selected"]

[connection signal="pressed" from="TagSelector/Tag/TagButtonAdd" to="." method="_on_TagButtonAdd_pressed"]

[connection signal="pressed" from="TagSelector/Tag/TagButtonDel" to="." method="_on_TagButtonDel_pressed"]

[connection signal="pressed" from="TagSelector/Tag/TagButtonRen" to="." method="_on_TagButtonRen_pressed"]

[connection signal="text_entered" from="TagSelector/Tag/LineEdit" to="." method="_on_TagLineEdit_text_entered"]

[connection signal="text_entered" from="TagSelector/Tag/LineEdit2" to="." method="_on_LineEdit2_text_entered"]

[connection signal="text_entered" from="SkillEdit/Name/LineEdit" to="." method="_on_NameLineEdit_text_entered"]

[connection signal="pressed" from="SkillEdit/Effect/Button" to="." method="_on_EffectButton_pressed"]

[connection signal="file_selected" from="SkillEdit/Effect/FileDialog" to="." method="_on_FileDialog_file_selected"]

[connection signal="item_selected" from="SkillEdit/Source/OptionButton" to="." method="_on_OptionButton2_item_selected"]

[connection signal="value_changed" from="SkillEdit/Levels/SpinBox" to="." method="_on_LevelsSpinBox_value_changed"]

[connection signal="pressed" from="SkillEdit/SkillLV1" to="." method="_on_SkillLV_pressed" binds= [ 0 ]]

[connection signal="pressed" from="SkillEdit/SkillLV2" to="." method="_on_SkillLV_pressed" binds= [ 1 ]]

[connection signal="pressed" from="SkillEdit/SkillLV3" to="." method="_on_SkillLV_pressed" binds= [ 2 ]]

[connection signal="pressed" from="SkillEdit/SkillLV4" to="." method="_on_SkillLV_pressed" binds= [ 3 ]]

[connection signal="pressed" from="SkillEdit/SkillLV5" to="." method="_on_SkillLV_pressed" binds= [ 4 ]]

[connection signal="pressed" from="SkillEdit/SkillLV6" to="." method="_on_SkillLV_pressed" binds= [ 5 ]]

[connection signal="pressed" from="SkillEdit/SkillLV7" to="." method="_on_SkillLV_pressed" binds= [ 6 ]]

[connection signal="pressed" from="SkillEdit/SkillLV8" to="." method="_on_SkillLV_pressed" binds= [ 7 ]]

[connection signal="pressed" from="SkillEdit/SkillLV9" to="." method="_on_SkillLV_pressed" binds= [ 8 ]]

[connection signal="pressed" from="SkillEdit/PrintButton" to="." method="_on_PrintButton_pressed"]

[connection signal="toggled" from="LevelEdit/Contact/CheckBox" to="." method="_on_CheckBox_toggled"]

[connection signal="pressed" from="LevelEdit/Button" to="." method="_on_levelEditOKButton_pressed"]

[connection signal="pressed" from="LevelEdit/Button1" to="." method="_on_levelEditRevertButton_pressed"]

[connection signal="pressed" from="LevelEdit/Button2" to="." method="_on_levelEditCancelButton_pressed"]


